k8s/postgressql/postgressql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: postgressql
  name: postgressql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgressql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/postgres_network: "true"
        io.kompose.service: postgressql
    spec:
      containers:
        - image: postgres:latest
          name: postgres-micro-boots
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /data/postgres
              name: postgressql-claim0
      restartPolicy: Always
      volumes:
        - name: postgressql-claim0
          persistentVolumeClaim:
            claimName: postgressql-claim0
status: {}
